--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="description" content="Survey of UMSF quality of the educational process">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>UMSF Survey</title>
+
     <link rel="icon" type="image/x-icon" href="img/umsf.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+
     <script src="js/main.js"></script>
-    <script src="js/first-form.js"></script>
-    <script src="js/second-form.js"></script>
-    <script src="js/third-form.js"></script>
-    <script src="js/stats.js"></script>
+    <script src="js/form.js"></script>
 </head>
 
 <body>
     <main>
-        <form id="firstForm" onsubmit="sendAnswers(); createSecondForm()" method="get">
+        <form id="firstForm" onsubmit="sendAnswers();">
             <div>
                 <h2>Опитування УМСФ</h2>
                 <hr><p>Шановні здобувачі вищої освіти, просимо вас оцінити викладання дисциплін в УМСФ
@@ -36,12 +36,6 @@
             </div>
 
             <div class="form-group">
-                <label for="yearSelect">Рік набору</label>
-                <select class="form-control" id="yearSelect" required>
-                </select>
-            </div>
-
-            <div class="form-group">
                 <label for="educationalFormSelect">Форма навчання</label>
                 <select class="form-control" id="educationalFormSelect" required>
                     <option value=""></option>
@@ -50,15 +44,20 @@
                 </select>
             </div>
 
+            <!-- Options added by form.js -->
+            <div class="form-group">
+                <label for="yearSelect">Рік набору</label>
+                <select class="form-control" id="yearSelect" required>
+                </select>
+            </div>
+
             <div class="form-group">
                 <label for="specialitySelect">Освітня програма</label>
                 <select class="form-control" id="specialitySelect" required>
                 </select>
             </div>
-
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Далі</button>
         </form>
     </main>
-</body>
 
+</body>
 </html>
