--- a/index.html
+++ b/index.html
@@ -20,32 +20,25 @@
 
 <body>
     <main>
-        <form id="firstForm" onsubmit="sendAnswers();">
-            <div>
-                <h2>Опитування УМСФ</h2>
-                <hr><p>Шановні здобувачі вищої освіти, просимо вас оцінити викладання дисциплін в УМСФ
-                    для покращення якості освітнього процесу за вашою освітньою програмою. Усі анкети анонімні.</p>
-            </div>
+        <form>
+            <h2>Опитування УМСФ</h2>
+            <hr><p>Шановні здобувачі вищої освіти, просимо вас оцінити викладання дисциплін в УМСФ
+            для покращення якості освітнього процесу за вашою освітньою програмою. Усі анкети анонімні.</p>
 
+            <!-- Options added by form.js -->
             <div class="form-group">
                 <label for="educationLevelSelect">Освітній рівень</label>
                 <select class="form-control" id="educationLevelSelect" required>
-                    <option value=""></option>
-                    <option value="Магістр">Магістр</option>
-                    <option value="Бакалавр">Бакалавр</option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="educationalFormSelect">Форма навчання</label>
                 <select class="form-control" id="educationalFormSelect" required>
-                    <option value=""></option>
-                    <option value="Денна">Денна</option>
-                    <option value="Заочна">Заочна</option>
                 </select>
             </div>
 
-            <!-- Options added by form.js -->
+
             <div class="form-group">
                 <label for="yearSelect">Рік набору</label>
                 <select class="form-control" id="yearSelect" required>
