--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <script src="js/main.js"></script>
     <script src="js/form.js"></script>
+    <script src="js/lecturer-form.js"></script>
+    <script src="js/surey-results.js"></script>
 </head>
 
 <body>
