--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
     <link rel="stylesheet" href="css/style.css">
 
-    <script src="js/main.js"></script>
-    <script src="js/form.js"></script>
-    <script src="js/lecturer-form.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/first-form.js"></script>
+    <script src="js/second-form.js"></script>
     <script src="js/surey-results.js"></script>
 </head>
 
