--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
     <main>
         <form>
             <h2>Опитування УМСФ</h2>
-            <hr><p>Шановні здобувачі вищої освіти, просимо вас оцінити викладання дисциплін в УМСФ
-            для покращення якості освітнього процесу за вашою освітньою програмою. Усі анкети анонімні.</p>
+            <hr><p>Шановні здобувачі вищої освіти, 
+            просимо вас оцінити викладання дисциплін в УМСФ
+            для покращення якості освітнього процесу 
+            за вашою освітньою програмою. 
+            Усі анкети анонімні.</p>
 
-            <!-- Options added by form.js -->
+            <!-- Options added by first-form.js -->
             <div class="form-group">
                 <label for="educationLevelSelect">Освітній рівень</label>
                 <select class="form-control" id="educationLevelSelect" required>
@@ -39,7 +42,6 @@
                 <select class="form-control" id="educationalFormSelect" required>
                 </select>
             </div>
-
 
             <div class="form-group">
                 <label for="yearSelect">Рік набору</label>
@@ -54,6 +56,6 @@
             </div>
         </form>
     </main>
-
 </body>
+
 </html>
