--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <title>UMSF Survey</title>
 
-    <link rel="icon" type="image/x-icon" href="img/umsf.png">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
     <link rel="stylesheet" href="css/style.css">
 
-    <script src="js/script.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/first-form.js"></script>
     <script src="js/second-form.js"></script>
     <script src="js/surey-results.js"></script>
