End stats, lecturer storage.
Prepare project demonstration

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body>
+<body onload="">
     <main>
         <form>
             <h2>Опитування УМСФ</h2>
@@ -57,5 +57,4 @@
 <script src="js/main.js"></script>
 <script src="js/first-form.js"></script>
 <script src="js/second-form.js"></script>
-<script src="js/surey-results.js"></script>
 </html>
