--- a/stats.html
+++ b/stats.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-uk">
+
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Survey of UMSF quality of the educational process">
@@ -15,8 +16,9 @@
         <link rel="stylesheet" href="css/style.css">
 
         <script src="js/main.js"></script>
-        <script src="js/surey-results.js"></script>
+        <script src="js/survey-results.js"></script>
     </head>
+    
     <body>
         <main>
             <form>
@@ -24,20 +26,17 @@
 
                 <div class="form-group">
                     <label for="specialitySelect">Спеціальність</label>
-                    <select class="form-control" id="specialitySelect" required>
-                    </select>
+                    <select class="form-control" id="specialitySelect" required></select>
                 </div>
 
                 <div class="form-group">
                     <label for="selectDiscipline">Дисципліна</label>
-                    <select class="form-control" id="selectDiscipline" required>
-                    </select>
+                    <select class="form-control" id="selectDiscipline" required></select>
                 </div>
 
                 <div class="form-group">
                     <label for="selectTeacher">Викладач</label>
-                    <select class="form-control" id="selectTeacher" required>
-                    </select>
+                    <select class="form-control" id="selectTeacher" required></select>
                 </div>
 
                 <button class="btn btn-primary btn-lg btn-block" 
@@ -45,4 +44,5 @@
             </form>
         </main>
     </body>
+    
 </html>
