Create js module system

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
         <link rel="stylesheet" href="css/style.css">
 
-        <script src="js/main.js"></script>
-        <script src="js/second-form.js"></script>
+        <script type="module" src="js/main.js"></script>
+        <script type="module" src="js/first-form.js"></script>
+        <script type="module" src="js/second-form.js"></script>
     </head>
 
     <body>
@@ -50,7 +51,5 @@
             </form>
         </main>
     </body>
-
-<script src="js/first-form.js"></script>
 
 </html>
