--- a/stats.html
+++ b/stats.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Survey of UMSF quality of the educational process">
+        <meta name="description" content="Survey results">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Statistics</title>
@@ -15,8 +15,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
         <link rel="stylesheet" href="css/style.css">
 
-        <script src="js/main.js"></script>
-        <script src="js/survey-results.js"></script>
+        <script type="module" src="js/main.js"></script>
+        <script type="module" src="js/survey-results.js"></script>
     </head>
     
     <body>
