fix error on stats page

--- a/stats.html
+++ b/stats.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
         <link rel="stylesheet" href="css/style.css">
 
+        <script type="text/javascript" src="js/variables.js"></script>
         <script type="module" src="js/main.js"></script>
         <script type="module" src="js/survey-results.js"></script>
     </head>
