--- a/login.html
+++ b/login.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-	<title>Login</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" 
-    crossorigin="anonymous">
-    <script src="js/main.js"></script>
-  </head>
-  <body>
-    <div class="container">
-        <form class="form-signin" method="post" action="http://localhost:8080/login">
-            <h2 class="form-signin-heading">Please sign in</h2>
-            <p>
-              <label for="username" class="sr-only">Username</label>
-              <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
-            </p>
-            <p>
-              <label for="password" class="sr-only">Password</label>
-              <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-            </p>
-            <input name="_csrf" type="hidden" value="e9878350-cbe7-45e8-98a8-e4ce9b29c95e" />
-            <button class="btn btn-lg btn-primary btn-block" type="button" onclick="autorization()">Sign in</button>
-          </form>
-    </div>
-  </body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Survey of UMSF quality of the educational process">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+        <title>Login</title>
+        
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" 
+            crossorigin="anonymous">
+        <link rel="stylesheet" href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css"
+            crossorigin="anonymous">
+        <script type="module" src="js/main.js"></script>
+    </head>
+
+    <!-- Bootstrap login example -->
+    <body>
+        <div class="container">
+            <form class="form-signin" method="post" action="http://localhost:8080/login">
+                <h2 class="form-signin-heading">Please sign in</h2>
+                <p>
+                    <label for="username" class="sr-only">Username</label>
+                    <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
+                </p>
+                <p>
+                    <label for="password" class="sr-only">Password</label>
+                    <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+                </p>
+                <input name="_csrf" type="hidden" value="e9878350-cbe7-45e8-98a8-e4ce9b29c95e"/>
+                <button class="btn btn-lg btn-primary btn-block" type="button" onclick="autorization()">Sign in</button>
+            </form>
+        </div>
+    </body>
+
 </html>
