Delete logging for debugging

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h2>Опитування УМСФ</h2>
                 <hr><p>Шановні здобувачі вищої освіти, просимо вас оцінити викладання дисциплін в УМСФ
                 для покращення якості освітнього процесу за вашою освітньою програмою. Усі анкети анонімні.</p>
-                <p>Необхідно оцінити всіх викладачів, після оцінення, викладач зникає зі списку.</p>
+                <p>Необхідно оцінити всі дисципліни(після оцінення дисципліна зникає зі списку).</p>
 
                 <!-- Options added by first-form.js -->
                 <div class="form-group">
