--- a/src/index.html
+++ b/src/index.html
@@ -28,28 +28,28 @@
             <div class="form-group">
                 <label for="educationLevelSelect">Освітній рівень</label>
                 <select class="form-control" id="educationLevelSelect" required>
-                  <option value="" label="blank"></option>
+                  <option value="" label=" "></option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="educationalFormSelect">Форма навчання</label>
                 <select class="form-control" id="educationalFormSelect" required>
-                  <option value="" label="blank"></option>
+                  <option value="" label=" "></option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="yearSelect">Рік набору</label>
                 <select class="form-control" id="yearSelect" required>
-                  <option value="" label="blank"></option>
+                  <option value="" label=" "></option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="specialitySelect">Освітня програма</label>
                 <select class="form-control" id="specialitySelect" required>
-                  <option value="" label="blank"></option>
+                  <option value="" label=" "></option>
                 </select>
             </div>
         </form>
