--- a/src/stats.html
+++ b/src/stats.html
@@ -23,14 +23,14 @@
               <div class="form-group">
                   <label for="specialitySelect">Спеціальність</label>
                   <select class="form-control" id="specialitySelect" required>
-                    <option value="" label="blank"></option>
+                    <option value="" label=" "></option>
                   </select>
               </div>
 
               <div class="form-group">
                   <label for="selectTeacher">Викладач</label>
                   <select class="form-control" id="selectTeacher" required>
-                    <option value="" label="blank"></option>
+                    <option value="" label=" "></option>
                   </select>
               </div>
 
